# minimax-m27-dflash-end-to-end-DRAFT

./: .gitignore  README.md  all-speculators.patch  all-vllm.patch  pyproject.toml
patches/llama.cpp/: 01-minimax-m2-cb-hooks.patch  02-variable-length-target-layer-ids.patch  03-converter-drop-drafter-only-tensors.patch  04-dflash-begin-reset-state.patch
patches/speculators/: 01-eagle3-core-dtype-fixes.patch  02-train-script-dtype-cast.patch  03-data-empty-sample-dtypes.patch  04-trainer-nan-guard-and-midepoch-ckpt.patch  05-trainer-te-fp8-wrap.patch  06-train-script-fp8-flags.patch  07-dflash-anchor-valid-mask.patch  08-checkpointer-te-fp8-save.patch
patches/vllm/: 01-interfaces-aux-overflow-fix.patch  02-extract-hidden-states-buffer-zero.patch  (+1 more)
repro/: 00-spark-from-scratch.md  01-generation.md  02-training.md  03-inference.md  04-empirical-tau-llama-benchy.md  05-runtime-perf-notes.md  06-fp8-training.md  07-perf-optimization.md  08-perf-phase3.md  08-tracegen-server.md  5LAYER_PLAN.md  datagen_5L_loop.sh  prep_for_pr22105_converter.py  validator_daemon.py
scripts/: build_llama_dump_hiddens.sh  build_verifier_meta_stub.py  prep_full_for_buun_converter.py  worker_api_v3.py
tests/: __init__.py  conftest.py  test_compile_flex.py  test_dataset.py  test_deepseek_v4_nemotron3.py  test_format.py  test_fp8_wiring.py  test_hub.py  test_inference.py  test_liger_integration.py  test_prewarm_shapes.py  test_smoke_synthetic.py  test_te_fusion_expanded.py  test_tracegen.py  test_tracegen_server.py  test_verifier_overrides.py  test_verifiers.py  test_vocab_maps.py
(+122 files in other folders)
